--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,229 +1,195 @@
-.main {
+.main{
+  width: 100vw;
+  height:100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.hero{
+  height: 100vh;
+  width: 100%;
+  background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 40%),url('../assets/projectbg.jpg');
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  color: white;
+}
+.hero p{
+  text-align: center;
+  width: 50%;
+  border-radius: 15px;
+  padding: 10px 2%;
+  //background: radial-gradient(circle, rgba(255,255,255,0) 0%, rgba(0,54,171,.3) 0%, rgba(31,0,60,.3) 51%, rgba(31,0,60,0) 100%);
+}
+.heroContainer{
+  width: 90%;
+  height: 35vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  color: black;
 }
-
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
+.image{
+  width: 120px;
+  height: 60px;
 }
-
-.description a {
+.work{
+  width: 90%;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+.workTitle{
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.workSection{
+  height: 75vh;
+  width: 95%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.skillfull{
+  width: 90%;
+}
+.good{
+  width: 100%;
+  padding: 5% 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.third{
+  width: 100%;
+  height: 45vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.skillCard{
+  width: 90%;
+  height: 100%;
+  display: flex;
+  border-radius: 15px;
+  border: 2px solid white;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 0.5rem;
+  background: url('../assets/cardbg.jpg');
+  background-size: cover;
+  background-position: center;
+  transition: all 0.3s ease;
 }
-
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
+.skillCard h3, .skillCard p{
+  width: 80%;
 }
-
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
+.skillCard:hover{
+  box-shadow: 0px 0px 15px white;
+  transform:scale(1.02);
 }
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: var(--max-width);
+.left{
+  flex: 70%;
   width: 100%;
-}
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-}
-
-.center {
+  height: 100%;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.right{
+  flex: 30%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.bg{
+  width: 70%;
+  height: 80%;
+  padding: 0 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   justify-content: center;
   align-items: center;
-  position: relative;
-  padding: 4rem 0;
+  border-radius: 20px;
 }
+#jwd{
+  background: url('../assets/jwd.jpg');
+  background-size: cover;
+  background-position: center;
+}
+#vision{
+  background: url('../assets/vision.jpg');
+  background-size: cover;
+  background-position: center;
+}
+.overlay{
+  width: 100%;
+  padding: 0 15%;
+  height: 100%;
+  display: flex;
+  background: linear-gradient(0deg, rgba(0,0,0,1) 5%, rgba(0,0,0,0.2) 100%);
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: all 0.4s ease;
+}
+.overlay:hover{
+  opacity:1;
 
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
 }
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: "";
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
-}
-
-.logo {
-  position: relative;
-}
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
+@media only screen and (max-width: 1200px){
+  .heroContainer{
+    height: 50vh;
   }
-
-  .card:hover span {
-    transform: translateX(4px);
+  .hero p{
+    font-size:20px;
+    background: none;
+  }
+  .workSection{
+    height: 60vh;
   }
 }
-
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
+@media only screen and (max-width: 850px){
+  .workTitle h1{
+    font-size:30px;
   }
-}
-
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
+  .workSection{
+    height: 95vh;
+    flex-direction: column;
   }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
+  .third{
+    height: 25vh;
   }
-
-  .card {
-    padding: 1rem 2.5rem;
+  .skillCard{
+    height: 90%;
+    width: 95%;
   }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
+  .good{
+    flex-direction: column;
   }
-
-  .center {
-    padding: 8rem 0 6rem;
+  .left{
+    flex:35%;
   }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
-}
-
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
-}
-
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
+  .right{
+    flex: 65%;
   }
 }
