--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -57,6 +57,7 @@
     margin-top: 30%;
     z-index: 999;
     transition: all 0.1s ease-out;
+    will-change: transform;
 }
 #mobileLogo{
     display: none;
