--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -57,7 +57,7 @@
     font-size: 45px;
     margin-top: 30%;
     z-index: 999;
-    //transition: all 0.1s ease-out;
+    transition: transform 0.1s ease-out;
 }
 #mobileLogo{
     display: none;
