--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,7 @@
 html{
+  scroll-behavior: smooth;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch; 
   --scroll-behavior: smooth!important;
   scroll-behavior: smooth!important;
 }
