--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ html{
   -webkit-overflow-scrolling: touch; 
   --scroll-behavior: smooth!important;
   scroll-behavior: smooth!important;
+  overflow-x: hidden; 
 }
 :root{
 
